We created the Login page

--- a/Desktop/EPICS/File.html
+++ b/Desktop/EPICS/File.html
@@ -11,7 +11,7 @@
             <img  id = "purdue-ip" src ="purdue-ip.png" alt= "Purdue - International Programs">
             <input type = "text" class="textbox" id = "Username" placeholder ="Username"/>
             <input type = "text" class="textbox" id = "Password" placeholder ="Password"/>
-            <div class = "login">Login</div>
+            <a href = "first_page.html"><div class = "login">Login</div></a>
             <div class = "forgot_password"><a href="Password-form.html">Forgot Password ?</a></div>
             <div class = "register"><a href="register-form.html">Register</a></div>
         </div>
